Add support for multiple table generation at once

--- a/src/SimplePOCOGenerator/appsettings.json
+++ b/src/SimplePOCOGenerator/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "connectionString": "ADD CONNECTION STRING HERE",
-  "tableName": "ADD TABLE NAME",
-  "outputClassName": "OPTIONAL: FILL IN IF YOU WANT TO OVERRIDE TABLE NAME",
-  "namespace": "ADD NAMESPACE" 
+  "tableNames": [
+    "TestTable1",
+    "TestTable2"
+  ],
+  "namespace": "ADD NAMESPACE"
 }
